--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
   <div id="container">
   <!-- a section for the headings of the webpage and logo -->
     <header>
-      <a href="index.html"><img src="images/ffc_logo.png" alt="Fitness Club Logo" height="275" width="845"></a>
-
+      <a href="index.html"><img src="images/ffc_logo.png" alt="Fitness Club Logo"></a>
     </header>
 
     <!-- navigation section of the webpage
           use this area to add links to other pages-->
     <nav>
-      <a href="index.html">Home</a> &nbsp; &nbsp;
-      <a href="about.html">About Us</a> &nbsp; &nbsp;
-      <a href="class.html">Classes</a> &nbsp; &nbsp;
-      <a href="nutrition.html">Nutrition</a> &nbsp; &nbsp;
-      <a href="contact.html">Contact Us</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="class.html">Classes</a></li>
+        <li><a href="nutrition.html">Nutrition</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
     </nav>
 
     <!--  the main content of the web page-->
@@ -32,16 +33,28 @@
         Welcome to Fitness Club. Our mission is to help our clients meet their fitness and
         nutrition goals.
       </p>
-      <p>
-        If you have struggled with getting healthy and need the motivation and resources
-        to make a healthy lifestyle change, contact us today. Our facility includes state-of-the-art
-        equipment, convenient group training classes, nutrition tips and information to keep you healthy.
-      </p>
-      <p>
-        We provide a FREE one-week membership so you can experience the benefits of our equipment and facility.
-        This one-week trial gives you complete access to our equipment, training classes and nutrition planning.
-        Contact us today to start your free trial!
-      </p>
+      <div class="mobile">
+        <h3>FREE One-week Trial Membership</h3>
+        <p><a href="tel:8145559608">Call Us Today to Get Started</a></p>
+        <h4>Fitness Club Hours: </h4>
+        <p>Monday - Thursday: 6:00am - 6:00pm<br>
+          Friday: 6:00am - 4:00pm <br>
+          Saturday: 8:00am - 6:00pm <br>
+          Sunday: Closed
+        </p>
+      </div>
+      <div class="desktop">
+        <p>
+          If you have struggled with getting healthy and need the motivation and resources
+          to make a healthy lifestyle change, contact us today. Our facility includes state-of-the-art
+          equipment, convenient group training classes, nutrition tips and information to keep you healthy.
+        </p>
+        <p>
+          We provide a FREE one-week membership so you can experience the benefits of our equipment and facility.
+          This one-week trial gives you complete access to our equipment, training classes and nutrition planning.
+          Contact us today to start your free trial!
+        </p>
+    </div>
 
     </main>
 
