add media query for tablet

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
         muscle with weights and improve your core with weight training.
       </p>
 
-      <ul>
+      <ul class="items">
         <li>Dumbells</li>
         <li>Kettle Bells</li>
         <li>Barbells</li>
