improve UI for the home page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       </ul>
     </nav>
 
+    <!-- add banner for home page -->
+    <div id="banner" class="desktop">
+      <img src="images/homeBanner.jpg" alt="home banner image">
+    </div>
+
     <!--  the main content of the web page-->
     <main>
 
@@ -54,6 +59,14 @@
           This one-week trial gives you complete access to our equipment, training classes and nutrition planning.
           Contact us today to start your free trial!
         </p>
+
+        <h1>Start Today!</h1>
+        <!-- add some images for teh contact, nutrition and classes pages -->
+        <figure>
+          <a href="class.html"><img src="images/group.jpg" alt="group class"></a>
+          <a href="nutrition.html"><img src="images/nutrition.jpg" alt="nutrition image"></a>
+          <a href="contact.html"><img src="images/signup.jpg" alt="sign up image"></a>
+        </figure>
     </div>
 
     </main>
