--- a/about.html
+++ b/about.html
@@ -28,39 +28,45 @@
 
     <!--  the main content of the web page-->
     <main>
+      <section>
+        <h1>Weights</h1>
+        <img class="equip" src="images/equipment1.jpg" alt="Weight Equipment" height="195" width="260">
+        <p>Our facility includes a weight training area with several weight options. Build lean
+          muscle with weights and improve your core with weight training.
+        </p>
 
-      <h1>Weights</h1>
-      <img class="equip" src="images/equipment1.jpg" alt="Weight Equipment" height="195" width="260">
-      <p>Our facility includes a weight training area with several weight options. Build lean
-        muscle with weights and improve your core with weight training.
-      </p>
+        <ul class="items">
+          <li>Dumbells</li>
+          <li>Kettle Bells</li>
+          <li>Barbells</li>
+        </ul>
+      </section>
 
-      <ul class="items">
-        <li>Dumbells</li>
-        <li>Kettle Bells</li>
-        <li>Barbells</li>
-      </ul>
+      <section>
+        <h1>Cardio</h1>
+        <img class="equip" src="images/equipment2.jpg" alt="Cardio Equipment">
+        <p>Burn fat through cardio workouts. if you need to lose 20 lbs or more, include at least 30 minutes of cardio each day. We have several equipment choices
+        for your workout.</p>
+        <ul class="items">
+          <li>Treadmills</li>
+          <li>Elliptical Machines</li>
+          <li>Exercise Bikes</li>
+        </ul>
+      </section>
 
-      <h1>Cardio</h1>
-      <img class="equip" src="images/equipment2.jpg" alt="Cardio Equipment">
-      <p>Burn fat through cardio workouts. if you need to lose 20 lbs or more, include at least 30 minutes of cardio each day. We have several equipment choices
-      for your workout.</p>
-      <ul class="items">
-        <li>Treadmills</li>
-        <li>Elliptical Machines</li>
-        <li>Exercise Bikes</li>
-      </ul>
+      <section>
+        <h1>Personal Training</h1>
+        <img class="equip" src="images/equipment3.jpg" alt="Personal Training">
+        <p>Our certified personal trainers work with you one on one to help you obtain your fitness goals. Our personal trainers keep you motivated and push you farther than you would push yourself. When you feel like you cannot do one more rep, they tell you that you can. Personal training has many benefits.</p>
+        <ul class="items">
+          <li>Accountability</li>
+          <li>Personalized Programm</li>
+          <li>Consistent Support and Motivation</li>
+        </ul>
+      </section>
 
-      <h1>Personal Training</h1>
-      <img class="equip" src="images/equipment3.jpg" alt="Personal Training">
-      <p>Our certified personal trainers work with you one on one to help you obtain your fitness goals. Our personal trainers keep you motivated and push you farther than you would push yourself. When you feel like you cannot do one more rep, they tell you that you can. Personal training has many benefits.</p>
-      <ul class="items">
-        <li>Accountability</li>
-        <li>Personalized Programm</li>
-        <li>Consistent Support and Motivation</li>
-      </ul>
-
-      <div class="tablet">
+      <!-- change div to section -->
+      <section class="tablet">
         <h1>Common Exercises</h1>
         <p>The following are common exercises that we encourage our clients to do as part of their daily exercise routine.</p>
         <dl>
@@ -74,7 +80,7 @@
           <dd>Mountain climbers are a good cardio exercise. Place your hands on the floor in a push up position, then bring knee up to your chest and then switch as quickly as you can (as though you are climbing a mountain).</dd>
         </dl>
         <p>For more information about how to stay active, visit <a href=”http://www.fitness.gov/be-active/ways-to-be-active/”>fitness.gov</a>.</p>
-      </div>
+      </section>
     </main>
 
     <!-- footer section for the copyright and links to social medias -->
