--- a/contact.html
+++ b/contact.html
@@ -35,8 +35,16 @@
       </p>
 
       <p>
-        Phone Number <br>
+        Phone Number
+      </p>
+      <p>
         <a class="mobile" href="tel:8145559608">(814) 555-9608</a><span class="desktop">(814) 555-9608</span>
+      </p>
+      <p>
+        Email Address
+      </p>
+      <p>
+        <a href="mailto:forwardfitness@club.net" class="contact">forwardfitness@club.net</a>
       </p>
     </main>
 
