make the articles have same height

--- a/nutrition.html
+++ b/nutrition.html
@@ -32,7 +32,7 @@
     </div>
 
     <!--  the main content of the web page-->
-    <main>
+    <main class="flex-container">
       <article>
         <h2>Food for Thought</h2>
         <img src="images/nutrition1.jpg" alt="food for thought image" class="desktop">
