add media folder and add a form to contact page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
           <a href="contact.html"><img src="images/signup.jpg" alt="sign up image"></a>
         </figure>
     </div>
-
+    <audio controls autoplay>
+      <source src="media/ffc_aud.mp3" type="audio/mp3">
+      <source src="media/ffc_aud.ogg" type="audio/ogg">
+      <source src="media/ffc_aud.wav" type="audio/wav">
+      <p>The browser is not supporting audio tag</p>
+    </audio>
     </main>
 
     <!-- footer section for the copyright and links to social medias -->
