--- a/about.html
+++ b/about.html
@@ -82,6 +82,13 @@
         <p>For more information about how to stay active, visit <a href=”http://www.fitness.gov/be-active/ways-to-be-active/”>fitness.gov</a>.</p>
       </section>
     </main>
+    <div class="video">
+      <video controls autoplay>
+        <source src="media/ffc_vid.mp4" type="video/mp4">
+        <source src="media/ffc_vid.webm" type="video/webm">
+        <p>The browser is not supporting video tag</p>
+      </video>
+    </div>
 
     <!-- footer section for the copyright and links to social medias -->
     <footer>
