--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,40 @@
     <!--  the main content of the web page-->
     <main>
       <h2>Ready to get started? Contact us today.</h2>
+      <h2>Complete the form below to begin your free trial!</h2>
+      <form>
+        <label for="fName">First Name:</label>
+        <input type="text" name="fName" id="fName">
+        <label for="lName">Last Name:</label>
+        <input type="text" name="lName" id="lName">
+        <label for="email">E-mail:</label>
+        <input type="email" name="email" id="email">
+        <label for="phone">Phone:</label>
+        <input type="tel" name="phone" id="phone">
+
+        <p>I would like more information about:</p>
+        <ul>
+          <li><input type="checkbox" name="grpft" id="grpft" value="grpft" class="chkbx">Group Fitness</li>
+          <li><input type="checkbox" name="prtrain" id="prtrain" value="prtrain" class="chkbx">Personal Training</li>
+          <li><input type="checkbox" name="nutr" id="nutr" value="nutr" class="chkbx">Nutrition</li>
+        </ul>
+
+        <label for="reference">Referral Source:</label>
+        <select name="reference" id="reference">
+          <option value="ad">Advertisement</option>
+          <option value="friend">Friend</option>
+          <option value="google">Google</option>
+          <option value="social">Social</option>
+          <option value="other">Other</option>
+        </select>
+
+        <label for="questions">Questions?</label>
+        <textarea name="questions" rows="3" cols="25"></textarea>
+
+        <input type="submit" id="submit" class="btn" value="Submit">
+        <input type="reset" id="reset" class="btn" value="Reset">
+
+      </form>
       <p>We are located at: <br>
         25437 Bloom Court <br>
         Locket, GA 65524
