--- a/about.html
+++ b/about.html
@@ -92,9 +92,16 @@
 
     <!-- footer section for the copyright and links to social medias -->
     <footer>
-      <!-- &#169; copyright symbol html entity number -->
-      &copy; Copyright 2020. All Rights Reserved. <br>
-      <a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a>
+      <div id="copyright">
+        <p><!-- &#169; copyright symbol html entity number -->
+        &copy; Copyright 2020. All Rights Reserved. <br>
+        <a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a></p>
+      </div>
+      <div id="social">
+        <p>Connect with us in</p>
+        <p><a href=""><img src="images/fblogo.png" alt="facebook logo"></a></p>
+        <p><a href=""><img src="images/twitterlogo.png" alt="twitter logo"></a></p>
+      </div>
     </footer>
   </div>
 
