add js to project

--- a/about.html
+++ b/about.html
@@ -72,12 +72,16 @@
         <dl>
           <dt>Burpee</dt>
           <dd>Burpees are a great, full body exercise to increase your strength and endurance. Begin in a standing position, drop into and extend your hands forward, kick your feet back and then forward again quickly, and then jump up from a squatted</dd>
-
+          <br>
+          <button onclick="burpees()">See example</button>
           <dt>Plank</dt>
           <dd>Planks build your core strength. To perform a plank, get in a push up position and rest your forearms on the flo Hold the position as long as you can.</dd>
-
+          <br>
+          <button onclick="plank()">See example</button>
           <dt>Mountain Climber</dt>
           <dd>Mountain climbers are a good cardio exercise. Place your hands on the floor in a push up position, then bring knee up to your chest and then switch as quickly as you can (as though you are climbing a mountain).</dd>
+          <br>
+          <button onclick="mtnClimber()">See example</button>
         </dl>
         <p>For more information about how to stay active, visit <a href=”http://www.fitness.gov/be-active/ways-to-be-active/”>fitness.gov</a>.</p>
       </section>
@@ -104,6 +108,6 @@
       </div>
     </footer>
   </div>
-
+<script type="text/javascript" src="scripts/myFunctions.js"></script>
 </body>
 </html>
