--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
         <label for="questions">Questions?</label>
         <textarea name="questions" rows="3" cols="25"></textarea>
 
-        <input type="submit" id="submit" class="btn" value="Submit">
+        <input type="submit" id="submit" class="btn" value="Submit" onclick="tyAlert()">
         <input type="reset" id="reset" class="btn" value="Reset">
 
       </form>
@@ -96,6 +96,6 @@
       </div>
     </footer>
   </div>
-
+<script type="text/javascript" src="scripts/myFunctions.js"></script>
 </body>
 </html>
