--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
   <title>Fitness Club</title>
+  <script>
+    // dialog box
+    setTimeout (function delay() {
+      alert("Begin your one-week trial membership today")
+    }, 2000);
+  </script>
 </head>
 <body>
 
@@ -90,6 +96,5 @@
       </div>
     </footer>
   </div>
-
 </body>
 </html>
